--- a/rupnik2015.tex
+++ b/rupnik2015.tex
@@ -31,10 +31,12 @@
 \makeatother
 
 
-\jairheading{55}{2016}{283-xx}{03/24}{01/16}
+\jairheading{55}{2016}{283-316}{03/24}{01/16}
 \ShortHeadings{Cross-Lingual Document Similarity and Event Tracking}
 {Rupnik, Muhi\v{c}, Leban, Fortuna, \v{S}kraba \& Grobelnik}
 \firstpageno{1}
+
+\setcounter{page}{283}
 
 \begin{document}
 
